using System;

namespace TryCatch
{
    public class Person
    {
        
    }
}